gwaei (3.6.2-3) unstable; urgency=medium

  * fix missing dependency on libwaei (Closes: #715124)
  * bump standards version, no changes necessary
  * use debhelper compat version 9

 -- Norbert Preining <preining@debian.org>  Sat, 05 Nov 2016 16:47:04 +0900

gwaei (3.6.2-2) unstable; urgency=medium

  * import changes from Ubuntu to use reautoconf (Closes: #734562)
  * bump standards version, no changes necessary

 -- Norbert Preining <preining@debian.org>  Wed, 08 Jan 2014 20:02:32 +0900

gwaei (3.6.2-1) unstable; urgency=low

  * Imported Upstream version 3.6.2
  * drop debian/patches/fix-google-translate-url, fixed in a different way

 -- Norbert Preining <preining@debian.org>  Sat, 05 Jan 2013 12:46:08 +0900

gwaei (3.6.1-1) experimental; urgency=low

  * new upstream release: fixing bugs with Ubuntu (LP: #971240)

 -- Norbert Preining <preining@debian.org>  Mon, 24 Sep 2012 08:13:57 +0900

gwaei (3.6.0-1) experimental; urgency=low

  * unfuzzify patch(es)
  * new patch fix-google-translate-url to fix google search
  * new disabled patch ubuntu_unity_fix to fix Ubuntu's unity display problems
    (patch by Yvon TANGUY). This patch can be enabled in Ubuntu builds to
    get it working with Unity, but it breaks on Debian, so it is not
    activated by default. It might be unnecessary with new upstream
  * fixes for the rules file
  * new recommends: mecab-ipadic, hunspell-en-us

 -- Norbert Preining <preining@debian.org>  Wed, 19 Sep 2012 15:14:25 +0900

gwaei (3.4.3-1) unstable; urgency=low

  * new upstream release(s)
    . switch to hunspell, no need for enchant (Closes: #649576)
    . switch to gtk >= 3.3 (Closes: #641814)
    . disable old patches
  * adjust build dependencies

 -- Norbert Preining <preining@debian.org>  Thu, 26 Apr 2012 13:36:43 +0900

gwaei (3.2.0b1-2) unstable; urgency=low

  * fix for stupid libgtk library breaking unrelated software, needed
    otherwise gwaei will never start (see eog bug #665374 for reference)
