@@ -3,7 +3,7 @@ Section: gnome
 Priority: optional
 Maintainer: Norbert Preining <preining@debian.org>
 Build-Depends: libcurl4-gnutls-dev, libgtk-3-dev (>= 3.3.0), gnome-doc-utils, debhelper (>= 9), libncurses5-dev, libncursesw5-dev, imagemagick, intltool, rarian-compat, gsettings-desktop-schemas, libhunspell-dev, libmecab-dev, dh-autoreconf
-Standards-Version: 3.9.6
+Standards-Version: 3.9.8
 Homepage: http://www.zacharydovel.com/software/gwaei
 
 Package: gwaei
